# pvr.njoy

./: .gitignore  ChangeLog  Makefile.am  configure.in
addons/pvr.njoy/: Makefile.am  addon.xml.in
src/njoy/: .gitignore  Makefile.am  N7Xml.cpp  N7Xml.h  client.cpp  client.h
